[package]
name = "ue-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
hex = "0.4.3"
indicatif = "0.17.3"
minidom = "0.15.1"
rayon = "1.6.1"
roxmltree = "0.17.0"
sha1 = "0.10.5"
